--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.2"
+        "tailwindcss": "^2.0.2",
+        "vue": "^2.6.11",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue-router": "^3.5.2",
+        "vue-sweetalert2": "^5.0.2"
     }
 }
