--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f8f4bc097700adc8c3e6",
+    "/css/app.css": "/css/app.css?id=2b30a7dacddd43c225a5"
 }
