--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.2",
         "phpcfdi/sat-ws-descarga-masiva": "^0.4.2",
         "spatie/laravel-permission": "^5.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "kamona/kui-laravel-breeze": "^0.1.2",
         "laravel/breeze": "^1.4",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
