final roles y permisos

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
-        "alpinejs": "^2.7.3",
+        "alpinejs": "^2.8.2",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
@@ -27,6 +27,12 @@
     "dependencies": {
         "@casl/ability": "^5.4.3",
         "@casl/vue": "^1.2.3",
+        "@fortawesome/free-brands-svg-icons": "^5.15.4",
+        "@fortawesome/free-regular-svg-icons": "^5.15.4",
+        "@fortawesome/vue-fontawesome": "^2.0.6",
+        "@themesberg/flowbite": "^1.2.0",
+        "@themesberg/tailwind-datepicker": "^1.1.0",
+        "vue-cookies": "^1.7.4",
         "vue-sweetalert2": "^5.0.2"
     }
 }
